# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "192.168.55.42:8000",
+    "host": "192.168.55.42:8080",
     "basePath": "/",
     "paths": {
         "/distances": {
@@ -405,24 +405,6 @@
                 "responses": {}
             }
         },
-        "/protected/passenger-profile": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Retrieve passenger",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Announcement"
-                ],
-                "summary": "Get passenger profile for passenger user",
-                "responses": {}
-            }
-        },
         "/protected/places/{id}": {
             "delete": {
                 "security": [
@@ -447,6 +429,24 @@
                         "required": true
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/protected/profile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Announcement"
+                ],
+                "summary": "Get user profile",
                 "responses": {}
             }
         },
@@ -737,33 +737,6 @@
                         "schema": {
                             "$ref": "#/definitions/handlers.TaxistRating"
                         }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/protected/taxists/{taxist_id}": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Retrieve taxist by given taxist_id",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Announcement"
-                ],
-                "summary": "Get taxist by taxist_id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Taxist ID",
-                        "name": "taxist_id",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {}
